...
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_business"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions"
                    tools:text="Pizzeria" />
...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                tools:listitem="@layout/item_business" />

            <TextView
                android:id="@+id/no_results_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing_to_show"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
...
